# WeatherApp

./: CMakeLists.txt  README.md  main.cpp
API/: Forecast.cpp  Forecast.h  GeoAPI.cpp  GeoAPI.h  WeatherAPI.cpp  WeatherAPI.h
GUI/: MyFrame.hpp  history.cpp  history.h  history.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingwindow.cpp  settingwindow.h  settingwindow.ui  translate.bash
